# portfolio_fast_api

./: pyproject.toml
migrations/: env.py
migrations/versions/: e94a2fc7d248_create_users_table.py
portfolio_rest_api/: app.py  models.py  schemas.py
tests/: conftest.py  test_app.py  test_models.py
